--- a/YPrak/App.xaml
+++ b/YPrak/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:YPrak"
-             StartupUri="Auth.xaml">
+             StartupUri="StorekeeperWindow.xaml">
     <Application.Resources>
         <Style TargetType="TextBox">
             <Setter Property="Margin" Value="0,20,0,0"/>
