--- a/YPrak/StorekeeperWindow.xaml
+++ b/YPrak/StorekeeperWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:YPrak"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Экран кладовщика" Height="950" Width="800" MinHeight="950" MinWidth="800" Icon="logo-02.jpg" Closed="Window_Closed" Loaded="Window_Loaded">
+        Title="Экран кладовщика" Height="500" Width="800" MinHeight="950" MinWidth="800" Icon="Logo/logo-02.jpg" Closed="Window_Closed" Loaded="Window_Loaded">
     <Window.Resources>
         <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
         <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
