--- a/YPrak/ManagerWindow.xaml
+++ b/YPrak/ManagerWindow.xaml
@@ -18,23 +18,32 @@
             <Button Content="Выход" Margin="0,10,10,0" HorizontalAlignment="Right" Click="Button_Click"/>
             <TabControl>
                 <TabItem Header="Список изделий">
-                    <StackPanel HorizontalAlignment="Center">
-                        <TextBlock Text="Список изделий" Margin="0,40,0,30" FontSize="36" HorizontalAlignment="Center"/>
-                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                            <Label Content="Поиск по названию"/>
-                            <TextBox Margin="10, 0, 0, 0" MinWidth="450" Name="Search1" KeyDown="Search1_KeyDown"/>
-                        </WrapPanel>
-                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 20, 0, 10">
-                            <Label Content="Единица измерения"/>
-                            <ComboBox Margin="10, 0, 0, 0" MinWidth="450" Name="Edin" SelectionChanged="Edin1_SelectionChanged">
+                    <StackPanel>
+                        <TextBlock Text="Список изделий" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.5*"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="Поиск по названию:" />
+                            <TextBlock Grid.Row="1" Grid.Column="0" Text="Единица измерения:" />
+                            <TextBox Name="Search1" KeyDown="Search1_KeyDown" Margin="10" Grid.Row="0" Grid.Column="1"/>
+                            <ComboBox Margin="10" Grid.Row="1" Grid.Column="1" Name="Edin" SelectionChanged="Edin1_SelectionChanged">
                                 <ComboBoxItem Content="мм"/>
                                 <ComboBoxItem Content="см"/>
                                 <ComboBoxItem Content="дм"/>
                                 <ComboBoxItem Content="м"/>
                             </ComboBox>
-                        </WrapPanel>
-                        <DataGrid Height="300" Margin="10,10" x:Name="datagrid1"></DataGrid>
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1"></DataGrid>
+                        </Grid>
+
                     </StackPanel>
+                   
                 </TabItem>
                 <TabItem Header="Оформление заказа">
                     <StackPanel>
@@ -52,20 +61,30 @@
                 <TabItem Header="Заказы">
                     <StackPanel HorizontalAlignment="Center">
                         <TextBlock Text="Список заказов" Margin="0,40,0,30" FontSize="36" HorizontalAlignment="Center"/>
-                        <WrapPanel Orientation="Horizontal">
-                            <Label Content="Поиск по номеру"/>
-                            <TextBox Margin="35, 0, 10, 0" MinWidth="450" Name="Search2" KeyDown="Search2_KeyDown"/>
-                        </WrapPanel>
-                        <WrapPanel Orientation="Horizontal" Margin="0, 10, 0, 10">
-                            <Label Content="Поиск по покупателю"/>
-                            <TextBox Margin="0, 0, 10, 0" MinWidth="450" Name="Search3" KeyDown="Search3_KeyDown"/>
-                        </WrapPanel>
-                        <WrapPanel Orientation="Horizontal">
-                            <Label Content="Поиск по менеджеру"/>
-                            <TextBox Margin="5, 0, 10, 0" MinWidth="450" Name="Search4" KeyDown="Search4_KeyDown"/>
-                        </WrapPanel>
-                        <Button Margin="10" Content="Обновить" Click="Button_Click_1" />
-                        <DataGrid Height="300" Margin="10,10" x:Name="datagrid2"></DataGrid>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.5*"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="Поиск по номеру:" />
+                            <TextBlock Grid.Row="1" Grid.Column="0" Text="Поиск по покупателю:" />
+                            <TextBlock Grid.Row="2" Grid.Column="0" Text="Поиск по менеджеру:" />
+
+                            <TextBox Name="Search2" KeyDown="Search2_KeyDown" Margin="10" Grid.Row="0" Grid.Column="1"/>
+                            <TextBox Name="Search3" KeyDown="Search3_KeyDown" Margin="10" Grid.Row="1" Grid.Column="1"/>
+
+                            <TextBox Name="Search4" KeyDown="Search4_KeyDown" Margin="10" Grid.Row="2" Grid.Column="1"/>
+                           
+                            <Button Margin="10" Grid.Row="2" Grid.ColumnSpan="2" Content="Обновить" Click="Button_Click_1" />
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2"></DataGrid>
+                        </Grid>
                     </StackPanel>
                 </TabItem>
             </TabControl>
