--- a/YPrak/StorekeeperWindow.xaml
+++ b/YPrak/StorekeeperWindow.xaml
@@ -139,7 +139,7 @@
                                 <ComboBoxItem Content="Фурнитура"/>
                             </ComboBox>
                             <ComboBox Grid.Row="1" Grid.Column="1" x:Name="combobox2" Margin="10" SelectionChanged="combobox2_SelectionChanged" Height="28"/>
-                            <TextBox Grid.Row="2" Grid.Column="1" x:Name="textbox" Margin="10" KeyDown="textbox_KeyDown"/>
+                            <TextBox Grid.Row="2" Grid.Column="1" x:Name="sklad" Margin="10" KeyDown="textbox_KeyDown" IsReadOnly="True"/>
 
                             <TextBox Grid.Row="3" Grid.Column="1" x:Name="textbox1" Margin="10" KeyDown="textbox_KeyDown"/>
                             <TextBox Grid.Row="4" Grid.Column="1" x:Name="textbox2" Margin="10" IsReadOnly="True"/>
