--- a/YPrak/CustomerWindow.xaml
+++ b/YPrak/CustomerWindow.xaml
@@ -5,31 +5,73 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YPrak"
         mc:Ignorable="d"
-        Title="Экран заказчика" Height="700" Width="700" MinHeight="600" MinWidth="700" Icon="Logo/logo-02.jpg" Closed="Window_Closed">
+        Title="Экран заказчика" Height="500" Width="700" MinHeight="600" MinWidth="700" Icon="Logo/logo-02.jpg" Closed="Window_Closed">
     <Window.Resources>
         <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
         <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
         <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
         <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Black" />
     </Window.Resources>
+    <ScrollViewer>
     <StackPanel>
         <Button Content="Выход" Margin="0,10,10,0" HorizontalAlignment="Right" Click="Button_Click"/>
         <TabControl>
             <TabItem Header="Оформить заказ">
                 <StackPanel>
                     <TextBlock Text="Оформление заказа" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.5*"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="Итоговая стоимость" Grid.Row="3" Grid.Column="0"/>
+                            <TextBlock Text="Поиск по названию" Grid.Row="0" Grid.Column="0"/>
+                            <ComboBox Margin="10" Grid.Row="1" Grid.Column="1" Name="Edin1" SelectionChanged="Edin1_SelectionChanged">
+                                <ComboBoxItem Content="мм"/>
+                                <ComboBoxItem Content="см"/>
+                                <ComboBoxItem Content="дм"/>
+                                <ComboBoxItem Content="м"/>
+                            </ComboBox>
+                            <TextBlock Text="Единица измерения" Grid.Row="1" Grid.Column="0"/>
+                            <TextBox x:Name="OrderSearch" Margin="10" Grid.Row="0" Grid.Column="1" KeyDown="OrderSearch_KeyDown"/>
+                            <TextBox Text="0" x:Name="AllCost" Margin="10" Grid.Row="3" Grid.Column="1" IsReadOnly="True"/>
+                        <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1" MouseDown="datagrid1_PreviewMouseDown"></DataGrid>
+                        <Button Margin="10,10,10,20" Grid.Row="4" Grid.ColumnSpan="2" Content="Оформить" Click="Button_Click_1"/>
 
-                    <DataGrid Height="300" Margin="10,10" x:Name="datagrid1" Background="White" MouseDown="datagrid1_PreviewMouseDown"></DataGrid>
-
-                    <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Label Content="Итоговая стоимость"/>
-                        <TextBox Margin="10, 0, 0, 0" MinWidth="500" Name="AllCost"/>
-                    </WrapPanel>
-                    <Button Margin="10" Content="Оформить" Click="Button_Click_1"/>
+                    </Grid>
+                    
                 </StackPanel>
             </TabItem>
             <TabItem Header="Мои заказы">
+                <StackPanel>
+                    <TextBlock Text="Мои заказы" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.5*"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="Поиск по номеру:" />
+
+                            <TextBox Name="Search2" KeyDown="Search2_KeyDown" Margin="10" Grid.Row="0" Grid.Column="1"/>
+
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2"></DataGrid>
+                    </Grid>
+                </StackPanel>
             </TabItem>
         </TabControl>
     </StackPanel>
+    </ScrollViewer>
 </Window>
