--- a/YPrak/ManagerWindow.xaml
+++ b/YPrak/ManagerWindow.xaml
@@ -73,9 +73,9 @@
                             <TextBlock Text="Единица измерения" Grid.Row="2" Grid.Column="0"/>
                             <TextBox x:Name="Customer" Margin="10" Grid.Row="1" Grid.Column="1"/>
 
-                            <TextBox x:Name="OrderSearch" Margin="10" Grid.Row="0" Grid.Column="1" KeyDown="OrderSearch_KeyDown"/>
+                            <TextBox x:Name="OrderSearch" Margin="10" Grid.Row="0" Grid.Column="1"/>
                             <TextBox Text="0" x:Name="AllCost" Margin="10" Grid.Row="3" Grid.Column="1" IsReadOnly="True"/>
-                            <DataGrid Height="500" Grid.Row="3" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid11" MouseDown="datagrid1_PreviewMouseDown"></DataGrid>
+                            <DataGrid Height="500" Grid.Row="3" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid11" ></DataGrid>
                             <Button Margin="10,10,10,20" Grid.Row="4" Grid.ColumnSpan="2" Content="Оформить" Click="Button_Click_1"/>
 
                         </Grid>
