--- a/YPrak/App.xaml
+++ b/YPrak/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:YPrak"
-             StartupUri="ManagerWindow.xaml">
+             StartupUri="DirectoryWindow.xaml">
     <Application.Resources>
         <Style TargetType="TextBox">
             <Setter Property="Margin" Value="0,20,0,0"/>
@@ -43,6 +43,21 @@
         <Style TargetType="TabControl">
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Background" Value="#fffcd6"/>
         </Style>
+
+        <Style TargetType="TabItem">
+            <Setter Property="Background" Value="#D1EEFC"/>
+        </Style>
+
+        <Style TargetType="DataGrid">
+            <Setter Property="DataGridRow.Background" Value="#D1EEFC"/>
+        </Style>
+        
+        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#D1EEFC" />
+        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="#D1EEFC" />
+        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
+        <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Black" />
+
     </Application.Resources>
 </Application>
