--- a/YPrak/CustomerWindow.xaml
+++ b/YPrak/CustomerWindow.xaml
@@ -7,17 +7,11 @@
          Background="#fffcd6"
         mc:Ignorable="d"
         Title="Экран заказчика" Height="500" Width="700" MinHeight="600" MinWidth="700" Icon="Logo/logo-02.jpg" Closed="Window_Closed">
-    <Window.Resources>
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Black" />
-    </Window.Resources>
     <ScrollViewer>
     <StackPanel>
         <Button Content="Выход" Margin="0,10,10,0" HorizontalAlignment="Right" Click="Button_Click"/>
-            <TabControl  Background="#fffcd6">
-                <TabItem Header="Оформить заказ" Background="#D1EEFC">
+            <TabControl>
+                <TabItem Header="Оформить заказ">
                 <StackPanel>
                     <TextBlock Text="Оформление заказа" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
                     <Grid>
@@ -43,20 +37,14 @@
                             <TextBlock Text="Единица измерения" Grid.Row="1" Grid.Column="0"/>
                             <TextBox x:Name="OrderSearch" Margin="10" Grid.Row="0" Grid.Column="1" KeyDown="OrderSearch_KeyDown"/>
                             <TextBox Text="0" x:Name="AllCost" Margin="10" Grid.Row="3" Grid.Column="1" IsReadOnly="True"/>
-                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1" MouseDown="datagrid1_PreviewMouseDown" OpacityMask="#FFD1EEFC">
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                    </Style>
-                                </DataGrid.RowStyle>
-                            </DataGrid>
-                        <Button Margin="10,10,10,20" Grid.Row="4" Grid.ColumnSpan="2" Content="Оформить" Click="Button_Click_1"/>
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1" MouseDown="datagrid1_PreviewMouseDown"/>
+                            <Button Margin="10,10,10,20" Grid.Row="4" Grid.ColumnSpan="2" Content="Оформить" Click="Button_Click_1"/>
 
                     </Grid>
                     
                 </StackPanel>
             </TabItem>
-                <TabItem Header="Мои заказы" Background="#D1EEFC">
+                <TabItem Header="Мои заказы">
                 <StackPanel>
                     <TextBlock Text="Мои заказы" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
 
@@ -74,14 +62,8 @@
 
                             <TextBox Name="Search2" KeyDown="Search2_KeyDown" Margin="10" Grid.Row="0" Grid.Column="1"/>
 
-                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2">
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                    </Style>
-                                </DataGrid.RowStyle>
-                            </DataGrid>
-                    </Grid>
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2"/>
+                        </Grid>
                 </StackPanel>
             </TabItem>
         </TabControl>
