--- a/YPrak/DirectoryWindow.xaml
+++ b/YPrak/DirectoryWindow.xaml
@@ -8,94 +8,115 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
          Title="Экран директора" Height="650" Width="800" MinHeight="650" MinWidth="800" Icon="Logo/logo-02.jpg" Closed="Window_Closed">
-    <Window.Resources>
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Black" />
-    </Window.Resources>
     <ScrollViewer >
         <StackPanel >
-            <Button Content="Выход" Margin="0,10,20,0" HorizontalAlignment="Right" Click="Button_Click"/>
-            <TabControl Background="#fffcd6">
-                <TabItem Header="Списание тканей" Background="#D1EEFC">
+            <Button Content="Выход" Margin="0,10,10,0" HorizontalAlignment="Right" Click="Button_Click"/>
+            <TabControl>
+                <TabItem Header="Списание тканей">
                     <StackPanel>
-                        <TextBlock Text="Отчет по списанию тканей" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
+                        <TextBlock Text="Отчет по списанию тканей" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,10"/>
                         <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="Auto" />
+                                <RowDefinition/>
+                                <RowDefinition/>
                             </Grid.RowDefinitions>
-                            <FlowDocumentScrollViewer x:Name="docViewer">
+
+                            <FlowDocumentScrollViewer Grid.Row="0" Grid.ColumnSpan="2">
                                 <FlowDocument>
-                                    <Paragraph TextAlignment="Left" FontSize="15">
-                                        <DataGrid Height="250" Width="740" Margin="10" FontSize="16" x:Name="datagrid3">
-                                            <DataGrid.RowStyle>
-                                                <Style TargetType="DataGridRow">
-                                                    <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                                </Style>
-                                            </DataGrid.RowStyle>
-                                        </DataGrid>
+                                    <Paragraph>
+                                        <DataGrid Height="400" Width="720" FontSize="16" x:Name="datagrid3"></DataGrid>
                                     </Paragraph>
                                 </FlowDocument>
                             </FlowDocumentScrollViewer>
-                            <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" >
-                                <Button Content="Сохранить" Margin="10" Click="Save_Click" Width="200" />
-                                <Button Content="Удалить" Margin="10" Width="200" />
-                                <Button Content="Загрузить" Margin="10" Click="Load_Click" Width="200" />
-                            </StackPanel>
+                            <Button Content="Печать" Grid.ColumnSpan="2"  Grid.Row="1" Margin="20,10,10,0" Click="Button_Click_6"/>
+
                         </Grid>
                     </StackPanel>
                 </TabItem>
-                <TabItem Header="Списание фурнитуры" Background="#D1EEFC">
+                <TabItem Header="Списание фурнитуры">
                     <StackPanel>
-                        <TextBlock Text="Отчет по списанию фурнитуры" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
-                        <FlowDocumentScrollViewer>
-                            <FlowDocument>
-                                <Paragraph TextAlignment="Left" FontSize="15">
-                                    <DataGrid Height="250" Width="740" Margin="10" FontSize="16" x:Name="datagrid4"></DataGrid>
-                                </Paragraph>
-                            </FlowDocument>
-                        </FlowDocumentScrollViewer>
-                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20 0 0">
-                            <Button Content="Обновить" MinWidth="380" Click="Button_Click_5"/>
-                            <Button Content="Печать" MinWidth="380" Margin="10,0,0,0" Click="Button_Click_2"/>
-                        </WrapPanel>
+                        <TextBlock Text="Отчет по списанию фурнитуры" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,10"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+
+                            <FlowDocumentScrollViewer Grid.Row="0" Grid.ColumnSpan="2">
+                                <FlowDocument>
+                                    <Paragraph>
+                                        <DataGrid Height="400" Width="720" FontSize="16" x:Name="datagrid4"></DataGrid>
+                                    </Paragraph>
+                                </FlowDocument>
+                            </FlowDocumentScrollViewer>
+                            <Button Content="Печать" Grid.ColumnSpan="2"  Grid.Row="1" Margin="20,10,10,0" Click="Button_Click_6"/>
+
+                        </Grid>
+
                     </StackPanel>
                 </TabItem>
-                <TabItem Header="Остатки тканей" Background="#D1EEFC">
+                <TabItem Header="Остатки тканей">
                     <StackPanel>
-                        <TextBlock Text="Отчет по остаткам тканей" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
-                        <FlowDocumentScrollViewer>
-                            <FlowDocument>
-                                <Paragraph TextAlignment="Left" FontSize="15">
-                                    <DataGrid Height="250" Width="740" Margin="10" FontSize="16" x:Name="datagrid2"></DataGrid>
-                                </Paragraph>
-                            </FlowDocument>
-                        </FlowDocumentScrollViewer>
-                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20 0 0">
-                            <Button Content="Обновить" MinWidth="380" Click="Button_Click_3"/>
-                            <Button Content="Печать" MinWidth="380" Margin="10,0,0,0" Click="Button_Click_2"/>
-                        </WrapPanel>
+                        <TextBlock x:Name="header1" Text="Отчет по остаткам тканей" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,10"/>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            
+                            <FlowDocumentScrollViewer Grid.Row="0" Grid.ColumnSpan="2">
+                                <FlowDocument>
+                                    <Paragraph>
+                                        <DataGrid Height="400" Width="720" FontSize="16" x:Name="datagrid2"></DataGrid>
+                                    </Paragraph>
+                                </FlowDocument>
+                            </FlowDocumentScrollViewer>
+
+                            <Button Content="Печать" Grid.ColumnSpan="2"  Grid.Row="1" Margin="20,10,10,0" Click="Button_Click_7"/>
+
+                        </Grid>
+
                     </StackPanel>
                 </TabItem>
-                <TabItem Header="Остатки фурнитуры" Background="#D1EEFC">
+                <TabItem Header="Остатки фурнитуры">
                     <StackPanel>
-                        <TextBlock Text="Отчет по остаткам фурнитуры" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
-                        <FlowDocumentScrollViewer>
-                            <FlowDocument>
-                                <Paragraph TextAlignment="Left" FontSize="15">
-                                    <DataGrid Height="250" Width="740" Margin="10" FontSize="16" x:Name="datagrid1"></DataGrid>
-                                </Paragraph>
-                            </FlowDocument>
-                        </FlowDocumentScrollViewer>
-                        <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20 0 0">
-                            <Button Content="Обновить" MinWidth="380" Click="Button_Click_1"/>
-                            <Button Content="Печать" MinWidth="380" Margin="10,0,0,0" Click="Button_Click_2"/>
-                        </WrapPanel>
+                        <TextBlock Text="Отчет по остаткам фурнитуры" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,10"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+
+                            <FlowDocumentScrollViewer Grid.Row="0" Grid.ColumnSpan="2">
+                                <FlowDocument x:Name="DocFyr">
+                                    <Paragraph>
+                                        <DataGrid Height="400" Width="720" FontSize="16" x:Name="datagrid1"></DataGrid>
+                                    </Paragraph>
+                                </FlowDocument>
+                            </FlowDocumentScrollViewer>
+
+                            <Button Content="Печать" Grid.ColumnSpan="2"  Grid.Row="1" Margin="20,10,10,0" Click="Button_Click_6"/>
+                        </Grid>
                     </StackPanel>
                 </TabItem>
-                <TabItem Header="Изделия предприятия" Background="#D1EEFC">
+                <TabItem Header="Изделия">
                     <StackPanel>
                         <TextBlock Text="Список изделий" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
                         <Grid>
