--- a/YPrak/ManagerWindow.xaml
+++ b/YPrak/ManagerWindow.xaml
@@ -8,17 +8,11 @@
         WindowStartupLocation="CenterScreen"
          Background="#fffcd6"
         Title="Экран менеджера" Height="520" Width="800" MinHeight="500" MinWidth="800" Icon="Logo/logo-02.jpg" Closed="Window_Closed">
-    <Window.Resources>
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Black" />
-    </Window.Resources>
     <ScrollViewer>
         <StackPanel>
             <Button Content="Выход" Margin="0,10,10,0" HorizontalAlignment="Right" Click="Button_Click"/>
-            <TabControl Background="#fffcd6">
-                <TabItem Header="Список изделий" Background="#D1EEFC">
+            <TabControl>
+                <TabItem Header="Список изделий">
                     <StackPanel>
                         <TextBlock Text="Список изделий" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
                         <Grid>
@@ -40,19 +34,13 @@
                                 <ComboBoxItem Content="дм"/>
                                 <ComboBoxItem Content="м"/>
                             </ComboBox>
-                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1" MouseDown="datagrid1_MouseDown">
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                    </Style>
-                                </DataGrid.RowStyle>
-                            </DataGrid>
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1" MouseDown="datagrid1_MouseDown"/>
                         </Grid>
 
                     </StackPanel>
                    
                 </TabItem>
-                <TabItem Header="Оформление заказа" Background="#D1EEFC">
+                <TabItem Header="Оформление заказа">
                     <StackPanel>
                         <TextBlock Text="Оформление заказа" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
                         <Grid>
@@ -78,25 +66,19 @@
                                 <ComboBoxItem Content="м"/>
                             </ComboBox>
                             <TextBlock Text="Единица измерения" Grid.Row="2" Grid.Column="0"/>
-                            <TextBox x:Name="Customer" Margin="10" Grid.Row="1" Grid.Column="1"/>
+                            <ComboBox x:Name="Customer" Margin="10" Grid.Row="1" Grid.Column="1"/>
 
                             <TextBox x:Name="OrderSearch" Margin="10" Grid.Row="0" Grid.Column="1" KeyDown="OrderSearch_KeyDown"/>
                             <TextBox Text="0" x:Name="AllCost" Margin="10" Grid.Row="3" Grid.Column="1" IsReadOnly="True"/>
-                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid11" MouseDown="datagrid1_PreviewMouseDown">
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                    </Style>
-                                </DataGrid.RowStyle>
-                            </DataGrid>
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid11" MouseDown="datagrid1_PreviewMouseDown"/>
                             <Button Margin="10,10,10,20" Grid.Row="4" Grid.ColumnSpan="2" Content="Оформить" Click="Button_Click_1"/>
 
                         </Grid>
 
                     </StackPanel>
                 </TabItem>
-                <TabItem Header="Заказы" Background="#D1EEFC">
-                    <StackPanel HorizontalAlignment="Center">
+                <TabItem Header="Заказы">
+                    <StackPanel>
                         <TextBlock Text="Список заказов" Margin="0,40,0,30" FontSize="36" HorizontalAlignment="Center"/>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -120,13 +102,7 @@
                             <TextBox Name="Search4" KeyDown="Search4_KeyDown" Margin="10" Grid.Row="2" Grid.Column="1"/>
                            
                             <Button Margin="10" Grid.Row="2" Grid.ColumnSpan="2" Content="Обновить" Click="Button_Click_1" />
-                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2" MouseDown="datagrid2_MouseDown">
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                    </Style>
-                                </DataGrid.RowStyle>
-                            </DataGrid>
+                            <DataGrid Height="500" Grid.Row="2" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2" MouseDown="datagrid2_MouseDown"/>
                         </Grid>
                     </StackPanel>
                 </TabItem>
