--- a/YPrak/App.xaml
+++ b/YPrak/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:YPrak"
-             StartupUri="DirectoryWindow.xaml">
+             StartupUri="ManagerWindow.xaml">
     <Application.Resources>
         <Style TargetType="TextBox">
             <Setter Property="Margin" Value="0,20,0,0"/>
@@ -50,14 +50,29 @@
             <Setter Property="Background" Value="#D1EEFC"/>
         </Style>
 
+        <Style TargetType="DataGridRow">
+            <Setter Property="Background" Value="#D1EEFC"></Setter>
+        </Style>
+
         <Style TargetType="DataGrid">
-            <Setter Property="DataGridRow.Background" Value="#D1EEFC"/>
+            <Setter Property="Background" Value="#D1EEFC"/>
+        </Style>
+
+        <Style TargetType="{x:Type DataGridCell}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type DataGridCell}">
+                        <ContentPresenter />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
         
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="#D1EEFC" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
-        <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Black" />
-
     </Application.Resources>
 </Application>
