--- a/YPrak/StorekeeperWindow.xaml
+++ b/YPrak/StorekeeperWindow.xaml
@@ -135,7 +135,7 @@
                         </Grid>
                     </StackPanel>
                 </TabItem>
-                <TabItem Header="Списание ткани" Background="#D1EEFC">
+                <TabItem Header="Списание ткани">
                     <StackPanel>
                         <TextBlock Text="Списание тканей" FontSize="36" HorizontalAlignment="Center" Margin="0,40,0,30"/>
                         <Grid>
@@ -162,13 +162,7 @@
                                 <ComboBoxItem Content="м"/>
                             </ComboBox>
                             <Button Margin="10" Content="Списать" Grid.Row="3" Grid.ColumnSpan="2" Click="SpTkani"/>
-                            <DataGrid Height="500" Grid.Row="4" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1" BorderBrush="Black" MouseDown="datagrid1_PreviewMouseDown">
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                    </Style>
-                                </DataGrid.RowStyle>
-                            </DataGrid>
+                            <DataGrid Height="500" Grid.Row="4" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid1" BorderBrush="Black" MouseDown="datagrid1_PreviewMouseDown"/>
                         </Grid>
 
                     </StackPanel>
@@ -200,13 +194,7 @@
                                 <ComboBoxItem Content="м"/>
                             </ComboBox>
                             <Button Margin="10" Content="Списать" Grid.Row="3" Grid.ColumnSpan="2" Click="SpFyr"/>
-                            <DataGrid Height="500" Grid.Row="4" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2" MouseDown="datagrid2_MouseDown">
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="#D1EEFC"></Setter>
-                                    </Style>
-                                </DataGrid.RowStyle>
-                            </DataGrid>
+                            <DataGrid Height="500" Grid.Row="4" Grid.ColumnSpan="2"  Margin="10" x:Name="datagrid2" MouseDown="datagrid2_MouseDown"/>
                         </Grid>
 
                     </StackPanel>
